syntax = "proto3";

package proto;

option go_package = "github.com/sarika-p9/my-pipeline-project/api/grpc/proto";

message Pipeline {
  string name = 1;
}

message CreatePipelineRequest {
  string name = 1;
}

message CreatePipelineResponse {
  string message = 1;
}

message ListPipelinesRequest {}

message ListPipelinesResponse {
  repeated Pipeline pipelines = 1;
}

service PipelineService {
  rpc CreatePipeline(CreatePipelineRequest) returns (CreatePipelineResponse);
  rpc ListPipelines(ListPipelinesRequest) returns (ListPipelinesResponse);
}
